--- a/creaCorso.html
+++ b/creaCorso.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/creaCorso.css">
     <title>Crea il tuo corso</title>
 </head>
@@ -35,7 +38,7 @@
                             <a class="nav-link active" href="creaCorso.html">Crea un corso</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-outline-warning text-white" href="login.html"
+                            <a class="nav-link btn btn-danger text-white ms-2 px-3" href="login.html"
                                 id="logout">Logout</a>
                         </li>
                     </ul>
@@ -51,28 +54,28 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <label for="nomeCorso" class="fs-5 bg-white rounded p-1">Inserisci il nome del corso </label>
                     <input type="text" class="fs-5" id="nomeCorso">
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-6">
                     <label for="durataCorso" class="fs-5">Inserisci la durata del corso </label>
                     <input type="text" class="fs-5" id="durataCorso">
                 </div>
             </div>
-            <div class="row mt-4 justify-content-center">
+            <div class="row mt-4 d-flex justify-content-between">
                 <h3 class="text-center mt-4 mb-4">Seleziona le materie del corso</h3>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <select id="materia1" class="fs-5 bg-white rounded p-1">
                         <option value="" selected></option>
                     </select>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <select id="materia2" class="fs-5 bg-white rounded p-1">
                         
                     </select>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <select id="materia3" class="fs-5 bg-white rounded p-1">
                     
                     </select>
