--- a/corsi.html
+++ b/corsi.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/corsi.css">
     <title>Elenco dei corsi</title>
 </head>
@@ -35,7 +38,7 @@
                             <a class="nav-link" href="creaCorso.html">Crea un corso</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-outline-warning text-white" href="login.html"
+                            <a class="nav-link btn btn-danger text-white ms-3 px-3" href="login.html"
                                 id="logout">Logout</a>
                         </li>
                     </ul>
