--- a/login.html
+++ b/login.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css">
     <title>Effettua il login</title>
 </head>
@@ -25,7 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-end pe-4" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link btn btn-outline-warning text-white" href="login.html"
+                            <a class="nav-link btn btn-danger text-white ms-2 px-3" href="login.html"
                                 id="logout">Logout</a>
                         </li>
                     </ul>
@@ -48,7 +51,7 @@
                     <div class="mt-2">
                         <div class="text-center">
                             <a href="#">Password dimenticata?!</a>
-                            <span class="ms-5">Non hai un account?<a href="#">Crea il tuo account</a></span><br>
+                            <span class="ms-5 ">Non hai un account?<a href="#">Crea il tuo account</a></span><br>
                         </div>
                     </div>
                     <button type="button" id="accedi" class="btn btn-outline-dark w-25 mx-auto mt-3">Accedi</button>
